Netrix: Fix ion-card style in dark mode

--- a/Netrix/src/app/app.scss
+++ b/Netrix/src/app/app.scss
@@ -160,6 +160,10 @@ body.dark {
     --background: #0d0d0d;
   }
 
+  ion-card {
+    --ion-item-background: #1c1c1c;
+  }
+
   --ion-item-background: #000000;
   --ion-item-background-activated: #313131;
 }
