--- a/Netrix/src/app/tab4/tab4.page.scss
+++ b/Netrix/src/app/tab4/tab4.page.scss
@@ -3,7 +3,3 @@ ion-card {
     margin: 0 !important;
     padding: 0 !important;
 }
-
-.dark {
-    --ion-item-background: #1c1c1c;
-}
